--- a/style.css
+++ b/style.css
@@ -1,23 +1,20 @@
-/* GENARAL */
+/* GENAARAL */
 * {
     margin: 0;
     padding: 0;
 }
+.clear {
+    clear: both;
+}
 body {
-    font-family: Arial,sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 15px;
 }
-.wrapper {
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
+ul  {
+    list-style: none;
 }
-h1 {
-    font-size: 45px;
-    color: #444;
-}
-h2 {
-    font-size: 55px;
+a {
+    text-decoration: none;
     color: #444;
 }
 h4 {
@@ -28,31 +25,45 @@ p {
     line-height: 20px;
     color: #777;
 }
-.orange {
-    color: #ff7a00;
-}
- a {
-    text-decoration:  none;
+h2 {
     color: #444;
- }
-
-ul {
-    list-style: none;
+    font-size: 55px;
 }
- /* header */
- header {
-    height: 120px;
- }
- header h1 {
+h1 {
+    font-size: 45px;
+    color: #444;
+}
+.orange {
+    color: #ff7100;
+}
+.wrapper {
+    width: 940ppx;
+    margin: 0 auto;
+    padding: 10px;
+}
+small {
+    font-size: 13px;
+    font-style: italic;
+}
+h3 {
+    font-size: 30px;
+    color: #444;
+}
+/* HEADER */
+
+header {
+   height: 120px;
+}
+header h1 {
     float: left;
-    margin: 32px
- }
- header nav {
+    margin-top: 32px;
+}
+header nav {
     float: right;
     margin-top: 50px;
- }
- header nav ul li 
- {
+}
+header nav ul li  {
+    float: left;
     display: inline-block;
 }
 header nav ul li a {
@@ -60,57 +71,174 @@ header nav ul li a {
     font-weight: bold;
     margin-right: 20px;
 }
-   /* Main image */
-   #main-image {
-    height: 500px;
-    background: url('Images/main.jpg') center;
-   }
-   #main-image h2 {
+
+/* MAIN-IMAGE */
+
+#main-image {
+    height: 580px;
+    background: url('/image/main.jpg') center;
+}
+#main-image h2 {
     font-weight: normal;
     text-transform: uppercase;
     text-align: center;
-    padding: 150px 0 40px 0;
-    margin-bottom: 20px;
-   }
-   .button-1 {
-    display: block;
+    padding: 150px 0 50px 0;
+}
+.button-1 {
     width: 120px;
+    display: block;
     height: 50px;
-    background-color: #ff7a00;
-    color: white;
+    background: #ff7100;
+    color: #fff;
     font-size: 20px;
     margin: 0 auto;
     line-height: 50px;
     text-align: center;
-    border-radius: 10px;
-   }
-   .button-1:hover {
+    border-radius: 5px;
+}
+.button-1:hover {
     background: #02b8dd;
-   }
-      /* Steps */
-      #steps ul {
-        margin: 80px 0;
-      }
-      #steps ul li {
-         width: 300px;
-         float: left;
-         padding-top: 140px;
-         text-align: center;
-         margin-right: 10px;
-      }
-      #steps p {
-         margin-bottom: 20px;
-      }
-      #steps h4 {
-        text-transform: uppercase;
-        margin-bottom: 20px;
-      }
-      #step-1 {
-        background: url('Images/steps-icon-1.png') no-repeat top center;
-      }
-      #step-2 {
-       background: url('Images/steps-icon-2.png') no-repeat top center;
-      }
-      #step-3 {
-       background: url('Images/steps-icon-3.png') no-repeat top center;
-      }
+}
+
+/* STEPS */
+
+#steps ul {
+    margin: 80px 0;
+    margin-left: 200px;
+}
+
+#steps ul li {
+    width: 300px;
+    float: left;
+    padding-top: 140px;
+    text-align: center;
+    margin-right: 10px;
+}
+ 
+#steps p  {
+    margin-bottom: 20px;
+}
+
+#steps h4 {
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+#step-1 {
+    background: url('image/steps-icon-1.png') no-repeat top center;
+}
+
+#step-2 {
+    background: url('image/steps-icon-2.png') no-repeat top center;
+}
+
+#step-3  {
+    background: url('image/steps-icon-3.png') no-repeat top center;
+}
+
+/* POSSIBILITIES */
+
+#possibilites {
+    background-color: #efefef;
+     padding: 60px 0;
+}
+ #possibilities article {
+    width: 460px;
+    height: 270px;
+    float: left;
+    border-radius: 10px;
+} 
+
+#possibilities article:first-child {
+    margin-right: 20px;
+}
+.overlay {
+    background: rgba(247, 243, 243, 0.95);
+    height: 100%;
+    width: 190px;
+    padding: 20px;
+    border-radius: 10x 0 0 10px;
+    text-align: center;
+}
+article h4 {
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    text-align: center;
+}
+#possibilities p {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.button-2 {
+    color: #fff;
+    background-color: #ff7100;
+    padding: 6px 20px;
+    border-radius: 3px;
+}
+.button-2:hover {
+color: #fff;
+    background-color: #02b8dd;
+}
+.button-2 {
+    text-align: center;
+}
+
+/* CONTACT */
+
+#contact  {
+    padding: 60px 0px;
+    text-align: center;
+}
+#contact h3 {
+    width: 400px;
+    text-transform: uppercase;
+    margin: 0 auto 20px auto;
+    border-bottom: 1px solid #02b8dd;
+    padding-bottom: 20px;
+}
+form {
+    margin: 60px 0 20px 0;
+}
+label {
+    font-weight: bold;
+    font-size: 20px;
+    color: #777;
+}
+input[type="text"] {
+    padding: 10px;
+    font-size: 2opx;
+    margin-right: 20px;
+    border: 20px solid #ddd;
+    border-right: 3px;
+}
+.button-3 {
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 11px;
+    border-style: none;
+    background-color: #02b8dd;
+    border-radius: 3px;
+}
+.button-3:hover {
+    color: #fff;
+    background-color: #444;
+}
+/* FOOTER */
+
+footer {
+    height: 260px;
+    background-color: #444;
+}
+footer h1 {
+    color: #fff;
+    text-align: center;
+    padding: 30px;
+}
+.copyright {
+    text-align: center;
+    font-weight: bold;
+    padding: 5px;
+    color: #c5baba;
+}
